# hydrust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.devcontainer/: Dockerfile  devcontainer.json
crates/hydrust-cli/: Cargo.toml
crates/hydrust-core/: Cargo.toml
crates/hydrust-core/src/: bus.rs  host.rs  lib.rs
crates/hydrust-core/src/engine/: bus.rs  discovery.rs  host.rs  mod.rs  state_machine.rs
crates/hydrust-core/src/services/: browser.rs  mod.rs
crates/hydrust-sdk/: Cargo.toml  LICENCE.md  README.md  build.rs
crates/hydrust-sdk/src/: lib.rs
crates/hydrust-sdk/wit/: provider.wit
crates/hydrust-tui/: Cargo.toml
crates/hydrust-tui/src/: app.rs  event.rs  main.rs  ui.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
plugins/mock-provider/: Cargo.toml  expanded.rs
plugins/mock-provider/src/: lib.rs
plugins/mock-yt/: Cargo.toml
plugins/mock-yt/src/: lib.rs
wit/: provider.wit
