[workspace]
resolver = "2"
members = [
    "crates/hydrust-tui",
    "crates/hydrust-core",
    "crates/hydrust-sdk", "crates/shared",
]
exclude = ["plugins/mock-provider", "plugins/mock-yt"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["razorblade23 <contact@razorblade23.dev>"]
license = "MIT"
repository = "https://github.com/razorblade23/hydrust"


[workspace.dependencies]
# Common dependencies shared across the project
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { version = "0.52.0", features = ["realloc"]}
log = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
