[package]
name = "hydrust-core"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
wasmtime = { version = "41.0", features = ["component-model", "async"] }
wasmtime-wasi = "41.0.1"
async-trait = "0.1"

# Media handling
gstreamer = "0.24"
gstreamer-app = "0.24"
# DRM logic (Add this later when you start on Widevine)
# rswidevine = "0.1"