[package]
name = "hydrust-sdk"
description = "Software Development Kit (SDK) for building Hydrust WASM plugins"
authors = ["razorblade23 <contact@razorblade23.dev>"]
readme = "README.md"
repository = "https://github.com/razorblade23/hydrust/tree/master/crates/hydrust-sdk"
keywords = ["hydrust-sdk", "wasm-plugin", "hydrust-wasm", "hydrust-plugin"]
categories = ["wasm", "development-tools", "development-tools::ffi"]
build = "build.rs"
version = "0.1.2"
edition = "2024"
license = "MIT"
include = ["src/**/*", "wit/**/*", "build.rs", "Cargo.toml"]

[dependencies]
wit-bindgen = "0.53.0"
serde = { version = "1.0", features = ["derive"] }
# We use 'scraper' for HTML parsing inside WASM
scraper = "0.25"

[build-dependencies]
reqwest = { version = "0.13", features = ["blocking"] }
anyhow = "1.0"
fs_extra = "1.3"