[package]
name = "hydrust-tui"
version.workspace = true
edition.workspace = true

[dependencies]
hydrust-core = { path = "../hydrust-core" }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"